samples/enterprise-app/output/enterprise-app/deploy/cicd/tekton/enterprise-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: enterprise-app
  name: enterprise-app
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: el-enterprise-app-git-repo
                port:
                  name: port-8080
            path: /el-enterprise-app-git-repo
            pathType: Prefix
status:
  loadBalancer: {}
